# extremadurasinprisa

./: .env  .env.example  .gitignore  README.md  prompt_codex_app_turismo_camper.md  prompt_codex_extremadura_sin_prisas_mvp_fases_1_7.md  prompt_codex_extremadura_sin_prisas_v2.md  render.yaml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260612_0001_initial.py  20260613_0002_add_order_fulfillment_fields.py  20260613_0003_add_interest_points.py
backend/app/: main.py  seed.py
backend/app/api/v1/: admin.py  auth.py  health.py  me.py  orders.py  payments.py  public.py  router.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/repositories/: order_repository.py  passport_repository.py  route_repository.py  stamp_repository.py  user_repository.py
backend/app/schemas/: admin.py  auth.py  common.py  orders.py  passports.py
backend/app/security/: deps.py  passwords.py  tokens.py
backend/app/services/: admin_service.py  audit.py  auth_service.py  order_service.py  passport_service.py  public_service.py  serializers.py  utils.py
backend/app/tests/: conftest.py  test_admin.py  test_auth.py  test_config.py  test_flow.py  test_health.py
backend/extremadura_sin_prisas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: payment-gateways.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/routes/: guards.tsx
frontend/src/store/: auth.tsx
(+35 files in other folders)
