[project]
name = "extremadura-sin-prisas-backend"
version = "0.1.0"
description = "Backend MVP para Extremadura sin prisas"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "bcrypt>=4.1.3",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.9",
  "PyJWT>=2.9.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
